Fix Chromium layout bug with `hyphens: none`
Not sure what is going on with this bug. Chrome seems halfway through implementing hyphens support & something must have broken somewhere. But there's also no need for `hyphens: none` given that the default value `manual` has the same effect unless you're intentionally putting soft hyphens in your code.

Fixing issue observed by @prushforth and @Malvoz in #143

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,6 @@ body {
   border-radius: .6em;
   color: #333;
   font: 100%/1.3 Helvetica, Arial, Verdana, sans-serif;
-  hyphens: none;
   margin: 0 auto;
   max-width: 66rem;
   padding: 3em;
